# AIE8

00_AIM_Quicklinks/: README.md
01_Prototyping Best Practices & Vibe Check/: README.md
02_Embeddings_and_RAG/: .gitignore  Embedding_Primer.ipynb  Pythonic_RAG_Assignment.ipynb  README.md  ffmpeg-test.py  pyproject.toml  vectors_norms_cosine.ipynb
02_Embeddings_and_RAG/aimakerspace/: vectordatabase.py  youtube_utils.py
02_Embeddings_and_RAG/images/: RAG-PDF-pipeline.excalidraw  RAG-text-pipeline.excalidraw  RAG-video-pipeline.excalidraw  user-query-augmented-context.excalidraw
04_Production_RAG/: .gitignore  Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb  Ollama_Setup_and_Testing.ipynb  notes.txt  pyproject.toml
05_Our_First_Agent_with_LangGraph/: Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb  pyproject.toml
06_Multi_Agent_with_LangGraph/: Multi_Agent_RAG_LangGraph.ipynb  README.md  pyproject.toml
07_Synthetic_Data_Generation_and_LangSmith/: Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb  synthetic_testset.csv
08_Evaluating_RAG_With_Ragas/: Evaluating_Agents_with_Ragas_(2025)_AI_Makerspace.ipynb  Evaluating_RAG_with_Ragas_(2025)_AI_Makerspace.ipynb  pyproject.toml
09_Advanced_Retrieval/: Advanced_Retrieval_with_LangChain_Assignment.ipynb  pyproject.toml  synthetic_testset.csv
10_Open_DeepResearch/: langgraph.json  open-deep-research.ipynb  pyproject.toml
16_Production_RAG_and_Guardrails/: README.md
17_Deploying_Open_Source_Endpoints/: ENDPOINT_SETUP.md  README.md  endpoint_slammer.ipynb  (+2 more)
(+4 files in other folders)
